:v pagina casi completa
le falta subir img a la db y que se visualicen mas de 1 img en las
taeas, proceso completos(o eso quiero creer :v)

--- a/ProyectoUniJob/ProyectoUniJob/ProyectoUniJob.csproj
+++ b/ProyectoUniJob/ProyectoUniJob/ProyectoUniJob.csproj
@@ -363,6 +363,7 @@
     <Content Include="Views\Prueba\boton.cshtml" />
     <Content Include="Views\Prueba\sessioncoordenadas.cshtml" />
     <Content Include="Views\Usuario\PefilUsuarioTareas.cshtml" />
+    <Content Include="Views\Tareas\AceptartareasEmpleados.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
